<resources>

    <string name="app_name">AiFitness</string>
    <string name="app_name_2">AI Fitness Assistant</string>
    <string name="hello_blank_fragment">Hllo</string>

    <!-- USER OPERATION -->
    <string name="register_button">Kayıt Ol</string>
    <string name="login_button">Giriş</string>
    <string name="username">Kullancı Adı</string>
    <string name="password">Şifre</string>
    <string name="birthday">Doğum Günü</string>
    <string name="name">İsim</string>
    <string name="email">Mail</string>
    <string name="surname">Soyad</string>
    <string name="phone">Telefon</string>
    <string name="rememberme">Beni hatırla</string>
    <string name="forgotpassword">Şifremi unuttum</string>
    <string name="required">Doldurması zorunlu</string>

    <!--  HOME  -->
    <string name="popularWorkouts">Popüler İdmanlar</string>
    <string name="welcome">AI Fitness Assistant</string>
    <string name="chest">Göğüs</string>
    <string name="biceps">Kol</string>
    <string name="leg">Bacak</string>
    <string name="shoulder">Omuz</string>
    <string name="back">Sırt</string>
    <!-- BOTTOM MENU -->
    <string name="home">Ana Sayfa</string>
    <string name="exercise">İdman</string>
    <string name="profile">Profil</string>
    <!-- TOP APP MENU -->
    <string name="favorite">Favori</string>
    <string name="search">Arama</string>

    <!-- Exercise -->
    <string name="startExercise">Harekete Başla</string>
    <string name="level">Zorluk Seviyesi</string>
    <string name="intensity">Yoğunluk</string>
    <string name="averageTime">Ortalama Zaman</string>
    <string name="seeDetails">Detay</string>
    <string name="upload_images">Lütfen tıklayarak resimleri yükleyin</string>

    <!-- Profile -->
    <string name="nameKey">Kullanıcı Adı</string>
    <string name="phoneKey">Telefon</string>
    <string name="emailKey">Mail</string>
    <string name="saveProfile">Profili Kaydet</string>


    <string name="start_capture">Başla</string>
    <string name="stop_capture">Bitir</string>

    <string name="submit_button">Yükle</string>

    <string name="phone_number">Telefon Numaranız</string>
    <string name="sms_number">Sms Kodu</string>


    <string name="upload_image_text">Yüklemeye devam etmek için okları kullanın.</string>
    <string name="finish_upload_image_text">Yeterli sayıda resim yüklediniz.Gönder butonu ile
        resimlerinizi gönderebilirsiniz.</string>


    <!-- FACEBOOK LOGIN DO NOT CHANGE OR MOVE -->
    <string name="facebook_app_id">463084808629821</string>

    <string name="tfe_pe_app_name">TFL Pose Estimation</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
    <string name="tfe_pe_tv_tracking">Tracker: </string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Movenet MultiPose</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_tracker_array">
        <item>Off</item>
        <item>BoundingBox</item>
        <item>Keypoint</item>
    </string-array>

</resources>