<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="viewModel"
            type="com.deu.aifitness.ui.profile.ProfileVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homepage.ProfileFragment">

        <ImageView
            android:id="@+id/profileImageIV"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.deu.aifitness.component.aiedittext.AiEditText
            android:id="@+id/phoneAET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:keyName="@string/phoneKey"
            app:layout_constraintBottom_toTopOf="@+id/emailAET"
            app:layout_constraintEnd_toEndOf="@+id/profileImageIV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profileImageIV"
            app:layout_constraintTop_toBottomOf="@+id/profileImageIV" />

        <com.deu.aifitness.component.aiedittext.AiEditText
            android:id="@+id/emailAET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:keyName="@string/emailKey"
            app:layout_constraintBottom_toTopOf="@+id/editButtonBTN"
            app:layout_constraintEnd_toEndOf="@+id/profileImageIV"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profileImageIV"
            app:layout_constraintTop_toBottomOf="@+id/phoneAET" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editButtonBTN"
            style="@style/StandartButton"
            android:text="@string/saveProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>